--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,3 +30,11 @@ body {
     font-size: 16px;
     color: aquamarine;
 }
+
+/* FOOTER */
+
+.footer {
+    font-size: 21px;
+    color: gray;
+    text-align: right;
+}
